--- a/style.css
+++ b/style.css
@@ -140,6 +140,11 @@ i{
     border-style: none;
 }
 
+.btn-1:hover{
+    background-color: white;
+    color: rgb(126, 36, 209) ;
+}
+
 .btn-2{
     padding: 10px 15px;
     background-color: rgb(218, 218, 218);
@@ -148,6 +153,11 @@ i{
     box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.212);
     outline: none;
     border-style: none;
+}
+
+.btn-2:hover{
+    background-color:rgb(126, 36, 209);
+    color: white ;
 }
 
 
