--- a/style.css
+++ b/style.css
@@ -138,6 +138,7 @@ i{
     box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.212);
     outline: none;
     border-style: none;
+    transition: .5s all linear;
 }
 
 .btn-1:hover{
@@ -153,6 +154,7 @@ i{
     box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.212);
     outline: none;
     border-style: none;
+    transition: .5s all linear;
 }
 
 .btn-2:hover{
